[package]
name = "earthquake"
version = "1.0.0"
authors = ["csnover", "djsrv <dservilla@gmail.com>"]
description = "Library for reading and modifying Director files"
homepage = "https://github.com/Earthquake-Project/earthquake-rust"
repository = "https://github.com/Earthquake-Project/earthquake-rust"
readme = "README.md"
license = "Apache-2.0"
edition = "2018"

[dependencies]
bitflags = "1.2"
byteorder = "1.3"
byteordered = "0.4"
encoding = "0.2"
enum-display-derive = "0.1"
