[package]
name = "earthquake"
version = "1.0.0"
authors = ["csnover", "djsrv <dservilla@gmail.com>"]
description = "Library for reading and modifying Director files"
homepage = "https://github.com/Earthquake-Project/earthquake-rust"
repository = "https://github.com/Earthquake-Project/earthquake-rust"
readme = "README.md"
license = "Apache-2.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
bitflags = "1.2"
byteorder = "1.3"
byteordered = "0.4"
crc = "1.8"
derive_more = "0.99"
encoding = "0.2"
enum-display-derive = "0.1"
num-derive = "0.3"
num-traits = "0.2"
pest = "2.1"
pest_derive = "2.1"
unicase = "2.6"

# For bin only
pico-args = "0.3"
