[package]
name = "earthquake"
version = "1.0.0"
authors = ["Earthquake Project contributors"]
description = "Open-source Director Projector reimplementation"
homepage = "https://github.com/Earthquake-Project/earthquake-rust"
repository = "https://github.com/Earthquake-Project/earthquake-rust"
readme = "README.md"
license = "Apache-2.0"
edition = "2018"
build = "build.rs"

[dependencies]
anyhow = "1.0"
bitflags = "1.2"
byteorder = "1.3"
byteordered = "0.4"
cpp_core = "0.6"
crc = "1.8"
derive_more = "0.99"
encoding = "0.2"
num-derive = "0.3"
num-traits = "0.2"
pest = "2.1"
pest_derive = "2.1"
qt_core = "0.5"
qt_gui = "0.5"
qt_widgets = "0.5"
strum = "0.18"
strum_macros = "0.18"
unicase = "2.6"

# For bin only
pico-args = "0.3"

[build-dependencies]
vergen = "3"
