[package]
name = "libearthquake"
version = "1.0.0"
authors = ["Earthquake Project contributors"]
description = "Open-source Director library reimplementation"
homepage = "https://github.com/Earthquake-Project/earthquake-rust"
repository = "https://github.com/Earthquake-Project/earthquake-rust"
readme = "../README.md"
license = "Apache-2.0"
edition = "2018"
build = "../build.rs"

[dependencies]
anyhow = "1.0"
bitflags = "1.2"
byteorder = "1.3"
byteordered = "0.4"
derive_more = "0.99"
libcommon = { path = "../libcommon" }
libmactoolbox = { path = "../libmactoolbox" }
num-derive = "0.3"
num-traits = "0.2"
pest = "2.1"
pest_derive = "2.1"
smart-default = "0.6"

[build-dependencies]
vergen = "3"
