[package]
name = "libearthquake"
version = "1.0.0"
authors = ["Earthquake Project contributors"]
description = "Open-source Director library reimplementation"
homepage = "https://github.com/Earthquake-Project/earthquake-rust"
repository = "https://github.com/Earthquake-Project/earthquake-rust"
readme = "../README.md"
license = "Apache-2.0"
edition = "2018"
build = "../build.rs"

[dependencies]
anyhow = "1.0"
binrw = { git = "https://github.com/csnover/binrw", branch = "earthquake" }
bitflags = "1.2"
bstr = "0.2"
byteorder = "1.3"
derive_more = "0.99"
libcommon = { path = "../libcommon" }
libmactoolbox = { path = "../libmactoolbox" }
num-derive = "0.3"
num-traits = "0.2"
smart-default = "0.6"
thiserror = "1.0"

[build-dependencies]
vergen = "3"
