[package]
name = "libmactoolbox"
version = "1.0.0"
authors = ["Earthquake Project contributors"]
description = "Open-source Macintosh Toolbox reimplementation"
homepage = "https://github.com/Earthquake-Project/earthquake-rust"
repository = "https://github.com/Earthquake-Project/earthquake-rust"
readme = "README.md"
license = "Apache-2.0"
edition = "2018"

[dependencies]
binrw = { git = "https://github.com/csnover/binrw", branch = "earthquake" }
bitstream-io = "0.8"
bstr = "0.2"
byteorder = "1.3"
cpp_core = { version = "0.6", optional = true }
crc = "1.8"
derive_more = "0.99"
encoding = { version = "0.2", optional = true }
libcommon = { path = "../libcommon" }
num-derive = "0.3"
num-traits = "0.2"
qt_core = { version = "0.5", optional = true }
qt_gui = { version = "0.5", optional = true }
qt_widgets = { version = "0.5", optional = true }
rc-zip = { version = "0.0", optional = true }
smart-default = "0.6"
strum = "0.18"
strum_macros = "0.18"
tempfile = { version = "3.1", optional = true }
thiserror = "1.0"

[features]
default = ["dialogs", "events", "intl", "quickdraw", "sys_info", "windows"]
dialogs = ["quickdraw"]
events = ["quickdraw"]
intl = ["encoding"]
quickdraw = ["cpp_core", "qt_core", "qt_gui", "qt_widgets"]
sys_info = ["cpp_core", "qt_core"]
vfs_zip = ["tempfile", "rc-zip"]
windows = ["quickdraw"]
